<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">StartupNews</string>
    <string name="app_description">An Android Startup News Client!</string>
    <string name="hello_world">Hello World!</string>

    <string-array name="section_titles">
        <item>热门文章</item>
        <item>最新文章</item>
        <item>最新评论</item>
    </string-array>

    <string name="google_play_url">http://play.google.com/store/apps/details?id=com.halzhang.android.apps.startupnews</string>
    <string name="host">http://news.dbanotes.net<xliff:g id="PATH">%1$s</xliff:g></string>
    <string name="vote_url">http://news.dbanotes.net/vote?for=<xliff:g id="ITEM_ID">%1$s</xliff:g>&amp;dir=up&amp;by=<xliff:g id="USERID">%2$s</xliff:g>&amp;auth=<xliff:g id="USER">%3$s</xliff:g>&amp;whence=news</string>
    <string name="comment_artist_title">on:<xliff:g id="TITLE">%1$s</xliff:g></string>
    <string name="news_subtext"><xliff:g id="POINTS">%1$d</xliff:g> points · <xliff:g id="COMMENTS">%2$d</xliff:g> comments</string>
    <string name="news_points"><xliff:g id="POINTS">%1$d</xliff:g> points · </string>
    <string name="news_comments"><xliff:g id="COMMENTS">%1$d</xliff:g> comments</string>
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="error">哎呀，出错了!</string>
    <string name="error_noemailapp">不好意思，你未安装邮件客户端，无法通过邮件反馈。您可以通过PC发送反馈邮件到【ghanguo@gmail.com】。非常感谢!</string>
    <string name="error_message">操作失败:<xliff:g id="MSG">%1$s</xliff:g></string>
    <string name="working">开发中~~~</string>
    <string name="hint_add_comment">添加评论</string>
    <string name="weibo_share_suffix">( 分享自StartupNews:http://play.google.com/store/apps/details?id=com.halzhang.android.apps.startupnews )</string>
    <string name="weibo_package_name">com.sina.weibo</string>
    <string name="pull_to_refresh_from_bottom_pull_label">上拉刷新</string>
    <string name="feedback">反馈</string>
    <string name="drawer_opened">打开</string>
    <string name="drawer_closed">关闭</string>
    <!-- menu string -->
    <string name="menu_share">分享</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_feedback">反馈</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_back">后退</string>
    <string name="menu_forward">前进</string>
    <string name="menu_readabilily">阅读</string>
    <string name="menu_website">用浏览器打开</string>
    <string name="menu_show_comment">查看评论</string>
    <string name="menu_show_article">查看原文</string>
    <string name="menu_up_vote">顶一下</string>
    <string name="menu_login">登录</string>
    <string name="menu_logout">注销</string>
    <string name="menu_original_url">原网页</string>
    <string name="menu_screenorientation">横竖屏切换</string>

    <!-- title string -->
    <string name="title_about">关于</string>
    <string name="title_settings">设置</string>
    <string name="title_shareto_startupnews">分享到StartupNews</string>
    <string name="title_discuss">查看评论</string>
    <string name="title_login">用户登录</string>

    <!-- preferences string -->
    <string name="pref_title_html_provider">网页阅读模式</string>
    <string name="pref_key_html_provider">pref_key_html_provider</string>
    <string name="pref_title_athalzhang">\@HalZhang</string>
    <string name="pref_summary_athalzhang">访问作者微博</string>
    <string name="pref_title_startupnews">StartupNews</string>
    <string name="pref_summary_startupnews">访问StartupNews网站</string>
    <string name="pref_key_cookie">pref_key_cookie</string>
    <string name="pref_key_default_browse">pref_key_default_browse</string>
    <string name="pref_title_default_browse">使用内置浏览器</string>
    <string name="pref_summary_on_default_browse">用内置浏览器浏览文章</string>
    <string name="pref_summary_off_default_browse">用系统浏览器浏览文章</string>
    <string name="pref_title_opensrouce">开放源代码许可</string>
    <string name="pref_key_version">pref_key_version</string>
    <string name="pref_title_version">版本</string>
    <string name="pref_summary_version">V<xliff:g id="VERSION_NAME">%1$s</xliff:g></string>
    <string name="pref_title_donation">这个APP用的还不错？</string>
    <string name="pref_summary_donation">你可以向作者捐款</string>

    <string-array name="html_provider_entries">
        <item>Readabilily</item>
        <item>新浪</item>
        <item>百度</item>
        <item>Google</item>
        <item>Viewtext</item>
        <item>原网页</item>
    </string-array>
    <string-array name="html_provider_entry_values">
        <item>http://www.readability.com/m?url=</item>
        <item>http://weibo.cn/sinaurl?to=m&amp;u=</item>
        <item>http://gate.baidu.com/tc?from=opentc&amp;src=</item>
        <item>http://www.google.com/gwt/x?u=</item>
        <item>http://viewtext.org/article?url=</item>
        <item></item>
    </string-array>

    <string name="default_html_provider"></string>
    <string name="tip_loading">加载中&#8230;</string>
    <string name="tip_last_page">亲，最后一页了&#8230;</string>
    <string name="tip_logout">注销&#8230;</string>
    <string name="tip_login_success">登录成功</string>
    <string name="tip_login_failure">登录失败</string>
    <string name="tip_logout_success">注销成功</string>
    <string name="tip_logout_failure">注销失败</string>
    <string name="tip_vote_success">顶成功了！</string>
    <string name="tip_vote_failure">投票失败！</string>
    <string name="tip_vote_duplicate">请不要重复投票</string>
    <string name="tip_cookie_invalid">用户已退出，请重新登录</string>
    <string name="tip_comment_success">评论成功!</string>
    <string name="tip_comment_failure">评论失败!</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_register">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="menu_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">登录中&#8230;</string>
    <string name="login_progress_init">初始化登陆参数&#8230;</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">不能为空!</string>

</resources>